new design and more svgs

--- a/assets/styles/components/_color-variables.scss
+++ b/assets/styles/components/_color-variables.scss
@@ -325,7 +325,7 @@ $grey: (
 );
 
 $shades: (
-  "black":        #120f11,
+  "black":        #000000,
   "white":        #FFFFFF,
   "transparent":  transparent
 );
