--- a/templates/blocks/_education.html.twig
+++ b/templates/blocks/_education.html.twig
@@ -1,4 +1,4 @@
-{% if education %}
+{% if education|default %}
     <div class="timeline2">
         <ul>
             {% for formation in education %}
