--- a/templates/blocks/_footer.html.twig
+++ b/templates/blocks/_footer.html.twig
@@ -1,13 +1,14 @@
-<footer class="footer-page black lighten-1">
+<footer class="footer-page transparent">
     <div class="footer-copyright">
         <div class="container">
-            <ul class="white-text center-align">
+            <ul class="black-text center-align">
                 <li class="attribution_title">Attributions</li>
-                <li><a class="purple-text text-lighten-3" href="https://fontawesome.com/license" >FontAwesome License</a></li>
+                <li><a class="grey-text" href="https://fontawesome.com/license" >FontAwesome License</a></li>
             </ul>
-            <p class="center-align white-text">
+            <p class="center-align black-text">
                 &copy; Charlotte Saidi. 2022.
             </p>
         </div>
     </div>
 </footer>
+{% include "blocks/components/svgs/_section_down.html.twig" %}
