--- a/templates/blocks/_presentation.html.twig
+++ b/templates/blocks/_presentation.html.twig
@@ -1,10 +1,7 @@
-{% if presentation %}
-    <div class="col s12 l7 text grey-text text-darken-4">
-        {{ presentation.textBlock|raw }}   
+{% if presentation|default %}
+
+    <div class="text grey-text text-darken-4">
+        {{ presentation.textBlock|raw }}
     </div>
-    <div class="col s5 hide-on-med-and-down">
-        <div class="profile right">
-            <img src="{{('uploads/presentation/' ~ presentation.image)}}" alt="Photo de présentation" class="img_profile" width="200" height="200">
-        </div>
-    </div>
+    
 {% endif %}
