--- a/assets/styles/dark/app.scss
+++ b/assets/styles/dark/app.scss
@@ -1,143 +1,3 @@
-@import "_preset.scss";
+@import "_main.scss";
 
-/* MAIN */
-body[theme=dark] {
-    .attribution_title {
-        border-top: rgba(255, 255, 255, .1) 2px solid;
-    }
-    .policy_main {
-        color: $font-color;
-    }
-    #portfolio {
-        .title {
-            p {
-                color: $font-color;
-            }
-        }
-    }
-    #competences {
-        .perso {
-            img {
-                filter: invert(30%);
-            }
-        }
-    }
-    .sep, .border-top-right {
-        background: #bd6a9a;
-        background: linear-gradient(90deg, #bd6a9a 0%, #6A1145 48%, #270619 100%);
-    }
-    .border-top {
-        background: #270619;
-        background: linear-gradient(90deg, #270619 0%, #6A1145 48%, #bd6a9a 100%);
-    }
-    .competences {
-        color: $secondary-theme;
-    }
-    .progress-inner-bar {
-        background: $secondary-theme;
-    }
-    #portfolio {
-        .btn-floating.show_blocks.btn-large.btn.white.purple-text {
-            background-color: #1c181b !important;
-        }
-    }
-    #contact {
-        .btn-floating {
-            background-color: #6A1145 !important;
-        }
-        .svg-inline--fa {
-            path {
-                fill: #ffffff;
-            }
-        }
-    }
-    .modal {
-        background-color: $main-theme !important;
-        .prefix {
-            color: $font-color;
-            &.active {
-                color: $secondary-theme;
-                svg path {
-                    fill: $secondary-theme;
-                }
-            }
-        }
-    }
-    .demo-3 {
-        figure {
-            img {
-                border: solid 5px $tertiary-theme;
-            }
-            figcaption {
-                background-color: $tertiary-theme;
-            }
-        }
-    }
-    .contact_form {
-        .prefix {
-            color: $font-color;
-        }
-    }
-    .timeline2 {
-        * {
-            color: $font-color;
-            &::before {
-                color: $font-color;
-            }
-            &::after {
-                color: $font-color;
-            }
-        }
-        &::-webkit-scrollbar {
-            background-color: transparent;
-        }
-        &::-webkit-scrollbar-track {
-            background-color: transparent;
-        }
-        &::-webkit-scrollbar-thumb {
-            box-shadow: inset 0 0 6px $main-lightScroll;
-            background-color: $main-lightScroll;
-        }
-        ul {
-            li {
-                background: $font-color;
-                border-left: 3px double $font-color;
-                &::after {
-                    border: 2px solid $font-color;
-                }
-                div.card-panel.inside {
-                    .location {
-                        border: 5px solid $font-color;
-                    }
-                    .location::after {
-                        border-top: 10px solid $font-color;
-                    }
-                }
-                &:nth-child(odd) {
-                    div.card-panel.inside {
-                        &::before {
-                            border-color: transparent $secondary-theme transparent transparent;
-                        }
-                    }
-                }
-                &:nth-child(even) {
-                    div.card-panel.inside {
-                        &::before {
-                            border-color: transparent transparent transparent $secondary-theme;
-                        }
-                    }
-                }
-                .time {
-                    color: $font-color;
-                }
-            }
-            li.in-view {
-                &::after {
-                    background: $secondary-theme;
-                    border: 2px solid $font-color;
-                }
-            }
-        }
-    }
-}
 @import './_media-queries.scss';
