--- a/assets/styles/materialize.scss
+++ b/assets/styles/materialize.scss
@@ -39,3 +39,6 @@
 // @import "components/pulse";
 // @import "components/datepicker";
 // @import "components/timepicker";
+
+@import "components/gallery";
+@import "components/swiper";
