--- a/templates/blocks/_project.html.twig
+++ b/templates/blocks/_project.html.twig
@@ -1,38 +1,40 @@
-{% if projects %}
-    {% for project in projects %}
-        <div class="col s12 l4 m6 portfolio_blocks">
-            <ul class="demo-3">
-                <li>
-                    <figure>
-                        <img src="{{asset('uploads/projets/' ~ project.image)}}" alt="Maquette du projet {{project.title}}" height="400"/>
-                        <figcaption>
-                            <h2 class="purple-text">{{project.title}}</h2>
+{% if projects|default %}
+
+    {# DESKTOP #}
+    <ul id="hexGrid">
+        {% for project in projects %}
+            <li class="hex">
+                <div class="hexIn">
+                    <a class="hexLink" href="{{project.links[0].href}}">
+                        <img src="{{asset('uploads/projets/' ~ project.image)}}" alt="Maquette du projet {{project.title}}" />
+                        <h2 class="white-text">{{project.title}}</h2>
+                        {{project.description|raw}}
+                    </a>
+                </div>
+            </li>
+        {% endfor %}
+    </ul>
+
+    {# MOBILE #}
+    <!-- Slider main container -->
+    <div class="swiper">
+        <!-- Additional required wrapper -->
+        <ul class="swiper-wrapper">
+            <!-- Slides -->
+            {% for project in projects %}
+                <li class="hex swiper-slide">
+                    <div class="hexIn">
+                        <a class="hexLink">
+                            <img src="{{asset('uploads/projets/' ~ project.image)}}" alt="Maquette du projet {{project.title}}" />
+                            <h2>{{project.title}}</h2>
                             {{project.description|raw}}
-                            <div class="title">
-                                <div class="border-top title-parts"></div>
-                                <p class="sub-title title-parts">Outils</p>
-                                <div class="border-top-right title-parts"></div>
-                            </div>
-                                <p>
-                                {% set lastOutil = project.outils|last %}
-                                {% for outil in project.outils %}
-                                    {{ outil.title }} {% if not loop.last %}<strong class="separator">~</strong> {% endif %}
-                                 {% endfor %}    
-                                </p>
-                            <div class="title">
-                                <div class="border-top title-parts"></div>
-                                <p class="sub-title title-parts">Liens</p>
-                                <div class="border-top-right title-parts"></div>
-                            </div>
-                            <div class="links">
-                            {% for link in project.links %}
-                                <a href="{{link.href}}" class="btn-primary btn-small wave-effect" target="_blank">{{link.title}}</a>
-                            {% endfor %}
-                            </div>
-                        </figcaption>
-                    </figure>
+                            {# <a class="hexLink" href="{{project.links[0].href}}"></a> #}
+                        </a>
+                    </div>
                 </li>
-            </ul>
-        </div>
-    {% endfor %}
+            {% endfor %}
+        </ul>
+        <div class="swiper-scrollbar"></div>
+    </div>
+
 {% endif %}
