--- a/templates/blocks/components/_day-night-switch.html.twig
+++ b/templates/blocks/components/_day-night-switch.html.twig
@@ -1,4 +1,6 @@
 {% set id = id %}
-<div class="wrapper">
-    <input type="checkbox" name="checkbox" class="switch" id="{{id}}">
+{% set class = class|default %}
+{% set wrap_class = wrap_class|default %}
+<div class="wrapper {{wrap_class}}">
+    <input type="checkbox" name="checkbox" class="switch {{class}}" id="{{id}}">
 </div>
