--- a/templates/blocks/contact/_new.html.twig
+++ b/templates/blocks/contact/_new.html.twig
@@ -1,4 +1,4 @@
-<div id="modal1" class="modal">
+<div id="modal1" class="modal js-contact">
     <div class="modal-content" id="modal_content">
         <h4 class="right-align">Contact</h4>
         <div id="preloader" class="hidden valign-wrapper center-align">
