--- a/templates/blocks/_project.html.twig
+++ b/templates/blocks/_project.html.twig
@@ -5,7 +5,7 @@
         {% for project in projects %}
             <li class="hex">
                 <div class="hexIn">
-                    <a class="hexLink" href="{{project.links[0].href}}">
+                    <a class="hexLink modal-trigger" data-target="modal1{{project.id}}">
                         <img src="{{asset('uploads/projets/' ~ project.image)}}" alt="Maquette du projet {{project.title}}" />
                         <h2 class="white-text">{{project.title}}</h2>
                         {{project.description|raw}}
@@ -14,6 +14,23 @@
             </li>
         {% endfor %}
     </ul>
+
+    {# MODALS #}
+    {% for project in projects %}
+        <div id="modal1{{project.id}}" class="modal hex_modal hidden">
+            <div class="modal-content">
+                <li class="hex">
+                    <div class="hexIn">
+                        <a class="hexLink content" href="{{project.links[0].href}}">
+                            <img src="{{asset('uploads/projets/' ~ project.image)}}" alt="Maquette du projet {{project.title}}" />
+                            <h2 class="white-text">{{project.title}}</h2>
+                            {{project.description|raw}}
+                        </a>
+                    </div>
+                </li>
+            </div>
+        </div>    
+    {% endfor %}
 
     {# MOBILE #}
     <!-- Slider main container -->
@@ -24,11 +41,10 @@
             {% for project in projects %}
                 <li class="hex swiper-slide">
                     <div class="hexIn">
-                        <a class="hexLink">
+                        <a class="hexLink modal-trigger" data-target="modal1{{project.id}}">
                             <img src="{{asset('uploads/projets/' ~ project.image)}}" alt="Maquette du projet {{project.title}}" />
                             <h2>{{project.title}}</h2>
                             {{project.description|raw}}
-                            {# <a class="hexLink" href="{{project.links[0].href}}"></a> #}
                         </a>
                     </div>
                 </li>
